syntax = "proto3";

package users;

import "Shared/models.proto";
    
option csharp_namespace = "Chatify.Services.Shared.Users";

service UsersServicer {
    rpc GetUsersByIds(GetUsersByIdsRequest) returns (GetUsersByIdsResponse);
}

message  GetUsersByIdsRequest {
    repeated string user_ids = 1;
}

message  GetUsersByIdsResponse {
    int32 count = 1;
    repeated models.UserModel users = 2;
}